app/javascript/pawoo_music/components/timeline/timeline.scss
.app.sp {
  .timeline {
    display: flex;
    height: calc(100vh - var(--height-deck) * 2);
    position: absolute;


    .scrollable .item-list {
      padding: 0 calc(var(--grid) * 4) calc(var(--grid) * 4);
      width: calc(var(--width-gallery) - var(--grid) * 8);
      box-sizing: content-box;
    }
  }

  .timeline.global_navi {
    left: calc( 100vw * -0 );
    transition: var(--hover-transition);
  }

  .timeline.lobby {
    left: calc( 100vw * -1 );
    transition: var(--hover-transition);
  }

  .timeline.gallery {
    left: calc( 100vw * -2 );
    transition: var(--hover-transition);
  }
}


.timeline {
  display: flex;
  flex-direction: row;
  height: 100%;
  width: 100%;
  position: relative;

  .navigation-column,
  .lobby-column,
  .gallery-column {
    position: relative;

    .scrollarea {
      position: absolute !important;
      width: 100% !important;
    }
  }

  .navigation-column {
    flex-shrink:    0;
    flex-grow:      0;
    width: var(--width-globalnavi);
  }

  .lobby-column {
    flex-shrink:    0;
    flex-grow:      0;
    width: var(--width-lobby);

    display: flex;
    flex-direction: column;
    background-color: var(--color2);

    .scrollable {
      overflow: visible;

      .item-list {
        padding: var(--padding30);

        .prepend {
          margin-bottom: var(--padding30);
        }

        article {
          margin-bottom: calc(var(--grid) / 2);
        }

        article:first-of-type {
          .status {
            border-radius: var(--radius) var(--radius) 0 0;
          }
        }

        article:last-of-type {
          .status {
            border-radius: 0 0 var(--radius) var(--radius);
          }
        }
      }
    }
  }

  .gallery-column {
    flex-shrink:    0;
    flex-grow:      0;
    width: var(--width-gallery-view);

    display: flex;
    flex-direction: column;

    .scrollable {
      text-align: center;

      .item-list {
        display: inline-block;
        width: var(--width-gallery);
        margin-bottom: var(--padding40);

        h3 {
          margin:         var(--verticalspace30);
          border-top:     1px solid var(--color2);
          padding:        var(--verticalspace30);
          font-size:      var(--text40-font);
          line-height:    var(--text40-line);
          font-weight:    bold;
        }
      }
    }

    article {
      margin:     var(--verticalspace30);
    }
  }
}

